# d2_hack

./: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  README.md  TutorialApplication.cpp  TutorialApplication.h  main.cpp
ResourcePlugin/: CMakeLists.txt  D2RawLoader.cpp  D2RawLoader.h  D2ResArchive.cpp  D2ResArchive.h  D2ResFileInfo.cpp  D2ResFileInfo.h  OffsetDataStream.cpp  OffsetDataStream.h  RawImageCodec.cpp  RawImageCodec.h  TxrImageCodec.cpp  TxrImageCodec.h
app/: CMakeLists.txt  application.cpp  application.h  b3d_car.cpp  b3d_room.cpp  b3d_scene_builder.cpp  b3d_scene_builder.h  b3d_tree_visitor.cpp  base_application.cpp  base_application.h  base_b3d_application.cpp  base_game_object.cpp  main.cpp
app/include/d2_hack/app/: b3d_car.h  b3d_room.h  base_application.h  base_b3d_application.h  base_game_object.h
app/tool/: CMakeLists.txt
app/tool/simple_b3d_mesh_renderer/: CMakeLists.txt  b3d_car.cpp  b3d_car.h  b3d_hit.cpp  b3d_hit.h  b3d_listener.cpp  b3d_listener.h  b3d_object.cpp  b3d_object.h  b3d_renderable_object.cpp  b3d_renderable_object.h  b3d_road.cpp  b3d_road.h  b3d_road_group.cpp  b3d_road_group.h  b3d_room.cpp  b3d_room.h  b3d_scene_builder.cpp  b3d_scene_builder.h  b3d_tree_visitor.cpp  b3d_tree_visitor.h  b3d_visitor.cpp  b3d_visitor.h  base_game_object.cpp  base_game_object.h  main.cpp  simple_b3d_mesh_renderer.cpp  simple_b3d_mesh_renderer.h  terrain.cpp  terrain.h
app/tool/simple_txr_renderer/: CMakeLists.txt  main.cpp  simple_txr_renderer.cpp  simple_txr_renderer.h
app/tool/terrain_viewer/: CMakeLists.txt  main.cpp  terrain_viewer.cpp  terrain_viewer.h
cmake/: copy_runtime.cmake  setup_ide.cmake  setup_toolchain.cmake  target.cmake
codec/: CMakeLists.txt
codec/archive/: CMakeLists.txt  material_parser.cpp  material_parser.h  res.cpp  res_file_info.cpp  res_file_info.h
codec/archive/include/d2_hack/codec/archive/: res.h
codec/archive/test/: CMakeLists.txt
codec/archive/test/res_archive/: CMakeLists.txt  test_res_archive.cpp
codec/archive/tool/: CMakeLists.txt
codec/archive/tool/palette_reader/: CMakeLists.txt  palette_reader.cpp
codec/data/: CMakeLists.txt  b3d_block_data_decl.h  b3d_reader.cpp  b3d_reader.h  b3d_reader2.cpp
codec/data/include/d2_hack/codec/data/: .nodelete  b3d.h  b3d_block_data_decl.h  b3d_block_data_decl2.h  b3d_reader.h  b3d_reader2.h
codec/data/test/b3d_reader/: CMakeLists.txt  test_b3d_reader.cpp
codec/data/tool/b3d_reader/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  D2HackCommon.cpp  D2HackCommon.h  d2_hack_common.cpp  d2_hack_common.h  d2_hack_platform_support.h  node_base.cpp  offset_data_stream.cpp  reader.cpp  resource_mgmt.cpp  utils.cpp
common/include/d2_hack/common/: log.h  memory_mgmt.h  node_base.h  numeric_conversion.h  offset_data_stream.h  platform.h  reader.h  resource_mgmt.h  types.h  utils.h
common/test/utils/: CMakeLists.txt  test_utils.cpp
config/: plugins.cfg.in  plugins_d.cfg.in  resources.cfg.in
d2_hack/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  TutorialApplication.cpp  TutorialApplication.h  base_application.cpp  base_application.h  d2_hack_application.cpp  main.cpp  (+3 more)
resource/: CMakeLists.txt
resource/archive/: CMakeLists.txt  material_parser.cpp  material_parser.h  ogre_material_generator.cpp  ogre_material_generator.h  ogre_material_provider.cpp  res.cpp  res_archive.cpp  res_extensions.cpp  res_file_info.cpp  res_file_info.h  res_material_parser.cpp  res_material_parser.h
resource/archive/include/d2_hack/resource/archive/: ogre_material_provider.h  res.h  res_archive.h  res_extensions.h
resource/archive/test/: CMakeLists.txt
resource/archive/test/res_archive/: CMakeLists.txt  test_res_archive.cpp
resource/archive/test/test_material_descriptor/: CMakeLists.txt  test_material_descriptor.cpp
resource/archive/tool/: CMakeLists.txt
resource/archive/tool/palette_reader/: CMakeLists.txt  palette_reader.cpp
resource/archive/tool/res_archive_extractor/: CMakeLists.txt  res_archive_extractor.cpp
resource/color/: CMakeLists.txt  color.cpp
resource/color/include/d2_hack/resource/color/: color.h
resource/data/: CMakeLists.txt  b3d_node.cpp  b3d_reader.cpp  b3d_reader_visitors.cpp  b3d_reader_visitors.h  b3d_tree.cpp  b3d_tree_optimization.cpp  b3d_utils.cpp  b3d_visitor.cpp
resource/data/include/d2_hack/resource/data/: b3d.h  b3d_block_data_decl.h  b3d_node.h  b3d_reader.h  b3d_tree.h  b3d_tree_optimization.h  b3d_types.h  b3d_utils.h  b3d_visitor.h
resource/data/test/b3d_reader/: CMakeLists.txt  test_b3d_reader.cpp
resource/data/tool/b3d_reader/: CMakeLists.txt  analyze.cpp  analyze.h  main.cpp  options.h  print.cpp  print.h
resource/image/: CMakeLists.txt  raw.cpp  txr.cpp
resource/image/include/d2_hack/resource/image/: raw.h  txr.h
resource/manager/: CMakeLists.txt  manager.cpp
resource/manager/include/d2_hack/resource/manager/: manager.h
resource/palette/: CMakeLists.txt  palette.cpp  plm_reader.cpp  plm_reader.h
resource/palette/include/d2_hack/resource/palette/: palette.h
resource/tech/: CMakeLists.txt  tech_reader.cpp
resource/tech/include/d2_hack/resource/tech/: tech_reader.h  tech_types.h
resource/tech/tool/: CMakeLists.txt
resource/tech/tool/tech_reader/: CMakeLists.txt  main.cpp
resource_plugin/: CMakeLists.txt  d2_b3d_block_data_decl.h  d2_b3d_reader.cpp  d2_b3d_reader.h  d2_res_archive.cpp  d2_res_archive.h  d2_res_file_info.cpp  d2_res_file_info.h  offset_data_stream.cpp  offset_data_stream.h  raw_image_codec.cpp  raw_image_codec.h  resource_loader.h  txr_image_codec.cpp  txr_image_codec.h
scene_node/: CMakeLists.txt  collision_scene_nodes.cpp  generator_scene_nodes.cpp  renderable_scene_nodes.cpp  scene_node_base.cpp  switchable_scene_nodes.cpp  terrain_scene_node.cpp
scene_node/include/d2_hack/scene_node/: collision_scene_nodes.h  generator_scene_nodes.h  renderable_scene_nodes.h  scene_node_base.h  switchable_scene_nodes.h  terrain_scene_node.h
tests/test_d2_b3d_reader/: CMakeLists.txt  test_d2_b3d_reader.cpp
tests/test_d2_res_archive/: CMakeLists.txt  test_d2_res_archive.cpp
(+45 files in other folders)
